Fix T56704: black / NaN values in Cycles normal pass.